# Cmake

./: CMakeLists.txt  Geometry.h  README.md  file.txt  forgotten  junk  junkfile.t  main.cpp  notaddmeok?.nope
ConfigureFiles/: paths.h.in  versions.h.in
InstallCmake/: CMakeLists.txt
Lib/GeometryBasic/Rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
Lib/GeometryBasic/Shape/: Base.cpp  Base.h  CMakeLists.txt
Lib/GeometryHeaderLib/Shape/: CMakeLists.txt  Shape.h
Lib/GeometryHeaderLib/Square/: CMakeLists.txt  Square.h
Lib/Static/Inc/: st.h
Lib/Static/Src/: st.cpp
Static-Shared-Lib/SharedLib/: CMakeLists.txt  main.cpp
Static-Shared-Lib/SharedLib/src/: bit.cpp
Static-Shared-Lib/Static-lib/: CMakeLists.txt
Static-Shared-Lib/Static-lib/include/bit/: bit.h
Static/Src/: st.cpp
hello-cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world  main.cpp
hello-headers/: CMakeLists.txt  main.cpp
hello-headers/include/: Shape.h
hello-headers/src/: Shape.cpp
lib/sublib/Bit/: CMakeLists.txt
lib/sublib/Bit/Include/: Bit.hpp
lib/sublib/Bit/Src/: Bit.cpp
lib/sublib/Static/Src/: st.cpp
lib/sublib2/Bit/: CMakeLists.txt
lib/sublib2/Bit/Include/: bit.h
